--- a/chzu-jc-service/src/main/resources/application.properties
+++ b/chzu-jc-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #控制台日志输出级别
-logging.level.web=debug
+#logging.level.web=debug
 #链接数据库
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
@@ -9,3 +9,10 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 server.port=9990
 #扫描mapper文件也就是mybatis映射的文件
 mybatis.mapper-locations=classpath:mapper/*/dao/*.xml
+
+# 解决中文乱码的问题
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
+
