--- a/chzu-jc-service/pom.xml
+++ b/chzu-jc-service/pom.xml
@@ -63,7 +63,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- redis相关
+        <!-- redis相关-->
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
@@ -76,7 +76,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
-          -->
 
         <!--分页插件-->
         <dependency>
