--- a/chzu-jc-service/pom.xml
+++ b/chzu-jc-service/pom.xml
@@ -64,7 +64,7 @@
         </dependency>
 
         <!-- redis相关-->
-		<dependency>
+<!--		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 		</dependency>
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
+		</dependency>-->
 
         <!--分页插件-->
         <dependency>
