--- a/chzu-jc-service/src/main/resources/application.properties
+++ b/chzu-jc-service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #控制台日志输出级别
 #logging.level.web=debug
 #链接数据库
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/market?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #这里是项目启动后的端口号，springboot是自带tomcat容器的
-server.port=9990
+server.port=9999
 #扫描mapper文件也就是mybatis映射的文件
 mybatis.mapper-locations=classpath:mapper/*/dao/*.xml
 
