--- a/chzu-jc-service/src/main/resources/application.properties
+++ b/chzu-jc-service/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
+#限制上传文件大小
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
