--- a/chzu-jc-service/src/main/resources/application.properties
+++ b/chzu-jc-service/src/main/resources/application.properties
@@ -19,3 +19,6 @@ server.tomcat.uri-encoding=UTF-8
 #限制上传文件大小
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+#定义图片加载路径
+com.image.path=http://localhost:9999/image/
