--- a/chzu-jc-service/src/main/resources/application.properties
+++ b/chzu-jc-service/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.url=jdbc:mysql://rm-m5ep744udnx9h9o041o.mysql.rds.aliyuncs.com
 spring.datasource.username=zhuhao
 spring.datasource.password=zhuhao2016@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#连接超时时间:毫秒，小于250毫秒，否则被重置为默认值30秒
+spring.datasource.hikari.max-lifetime =30000 
+#连接测试查询
+spring.datasource.hikari.connection-test-query=SELECT 1
 #这里是项目启动后的端口号，springboot是自带tomcat容器的
 server.port=9999
 #扫描mapper文件也就是mybatis映射的文件
