--- a/chzu-jc-service/pom.xml
+++ b/chzu-jc-service/pom.xml
@@ -118,6 +118,13 @@
             <version>3.17</version>
         </dependency>
 
+        <!--添加freeMarker  生成word-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.20</version>
+        </dependency>
+
     </dependencies>
 
     <build>
