--- a/chzu-jc-service/src/main/resources/application.properties
+++ b/chzu-jc-service/src/main/resources/application.properties
@@ -1,28 +1,28 @@
-#¿ØÖÆÌ¨ÈÕÖ¾Êä³ö¼¶±ğ
+#æ§åˆ¶å°æ—¥å¿—è¾“å‡ºçº§åˆ«
 #logging.level.web=debug
-#Á´½ÓÊı¾İ¿â
+#é“¾æ¥æ•°æ®åº“
 spring.datasource.url=jdbc:mysql://rm-m5ep744udnx9h9o041o.mysql.rds.aliyuncs.com:3306/market?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
-spring.datasource.username=zhuhao
-spring.datasource.password=zhuhao2016@
+spring.datasource.username=æ•°æ®åº“å
+spring.datasource.password=æ•°æ®åº“å¯†ç 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#Á¬½Ó³¬Ê±Ê±¼ä:ºÁÃë£¬Ğ¡ÓÚ250ºÁÃë£¬·ñÔò±»ÖØÖÃÎªÄ¬ÈÏÖµ30Ãë
+#è¿æ¥è¶…æ—¶æ—¶é—´:æ¯«ç§’ï¼Œå°äº250æ¯«ç§’ï¼Œå¦åˆ™è¢«é‡ç½®ä¸ºé»˜è®¤å€¼30ç§’
 spring.datasource.hikari.max-lifetime =30000 
-#Á¬½Ó²âÊÔ²éÑ¯
+#è¿æ¥æµ‹è¯•æŸ¥è¯¢
 spring.datasource.hikari.connection-test-query=SELECT 1
-#ÕâÀïÊÇÏîÄ¿Æô¶¯ºóµÄ¶Ë¿ÚºÅ£¬springbootÊÇ×Ô´øtomcatÈİÆ÷µÄ
+#è¿™é‡Œæ˜¯é¡¹ç›®å¯åŠ¨åçš„ç«¯å£å·ï¼Œspringbootæ˜¯è‡ªå¸¦tomcatå®¹å™¨çš„
 server.port=9999
-#É¨ÃèmapperÎÄ¼şÒ²¾ÍÊÇmybatisÓ³ÉäµÄÎÄ¼ş
+#æ‰«æmapperæ–‡ä»¶ä¹Ÿå°±æ˜¯mybatisæ˜ å°„çš„æ–‡ä»¶
 mybatis.mapper-locations=classpath:mapper/*/dao/*.xml
 
-# ½â¾öÖĞÎÄÂÒÂëµÄÎÊÌâ
+# è§£å†³ä¸­æ–‡ä¹±ç çš„é—®é¢˜
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
-#ÏŞÖÆÉÏ´«ÎÄ¼ş´óĞ¡
+#é™åˆ¶ä¸Šä¼ æ–‡ä»¶å¤§å°
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-#¶¨ÒåÍ¼Æ¬¼ÓÔØÂ·¾¶
+#å®šä¹‰å›¾ç‰‡åŠ è½½è·¯å¾„
 com.image.path=http://localhost:9999/image/
